--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "markdownlint-cli": "^0.45.0",
+    "prettier": "^3.6.2",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.0"
   },
