fix(security): remove hardcoded API keys and use environment variables
- Replace hardcoded Airtable and Perplexity API keys with environment variables
- Add validation to ensure environment variables are set
- Create .env.example file documenting required variables
- Add remove_secrets.py utility script for automated secret removal
- Update all populate_*.py scripts across scripts/, dist/, and ios/ directories

BREAKING CHANGE: Scripts now require AIRTABLE_API_KEY and PERPLEXITY_API_KEY environment variables to be set

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,13 @@
-# CharityAPI.org Configuration
-# Copy this file to .env and add your actual API keys
+# Recovery Compass Environment Variables
+# Copy this file to .env and fill in your actual values
 
-# API Keys from CharityAPI.org
-CHARITY_API_LIVE_KEY=live-your-live-key-here
-CHARITY_API_TEST_KEY=test-your-test-key-here
+***REMOVED***
+# Get this from: https://airtable.com/account
+AIRTABLE_API_KEY=your_airtable_api_key_here
 
-# API Mode: 'test' or 'live'
-CHARITY_API_MODE=test
+***REMOVED***
+# Get this from: https://www.perplexity.ai/settings/api
+PERPLEXITY_API_KEY=your_perplexity_api_key_here
 
-# API Proxy Configuration (Force Multiplication)
-# Enable to route all API calls through unified proxy
-USE_API_PROXY=false
-API_PROXY_URL=http://localhost:8088
-
-# Optional: Override default API endpoint
-# CHARITY_API_BASE_URL=https://api.charityapi.org/api/v1
-
-# Rate limiting (optional - handled by proxy when enabled)
-# CHARITY_API_RATE_LIMIT=100
-# CHARITY_API_RATE_WINDOW=60000
-
-# Cache settings (optional)
-# CHARITY_API_CACHE_ENABLED=true
-# CHARITY_API_CACHE_TTL=3600
+# Airtable Base ID (Recovery Compass)
+AIRTABLE_BASE_ID=appNBesu9xYl5Mvm1
