--- a/.github/workflows/automated-pr-optimization.yml
+++ b/.github/workflows/automated-pr-optimization.yml
@@ -30,7 +30,7 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm install @octokit/rest
+        run: npm install
 
       - name: Run PR optimization
         env:
