--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-jest": "^29.5.0",
     "cspell": "^9.2.0",
     "cspell-dict-npm": "^1.1.8",
+    "glob": "^10.3.10",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "markdownlint-cli": "^0.45.0",
@@ -23,6 +24,7 @@
     "lint": "markdownlint '**/*.md' --ignore node_modules --ignore coverage",
     "spell": "cspell \"**/*\" --no-progress",
     "check": "npm run lint && npm run spell",
+    "check:es-modules": "node scripts/es-module-migration.js",
     "eval": "openai tools evals ./alignment_tests --model gpt-4o",
     "test:alignment": "npm run eval && echo '✅ Alignment passed'",
     "snapshot:objectives": "node scripts/snapshot_objectives.js",
